--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,109 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  background-color: #00B050;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 10px 20px;
+}
+
+.header-register-contact {
+  display: flex;
+  justify-content: space-between;
+  width: 55%;
+}
+
+.header-button-register {
+  padding: 10px 20px; 
+  font-size: 16px;
+}
+
+.header-span {
   color: white;
+  padding-left: 10px;
+  font-size: 20px;
+  font-weight: 700;
+
 }
 
-.App-link {
-  color: #61dafb;
+.navbarmenu-item {
+  color: #646464;
+  font-size: 16px;
+  font-weight: 700;
+  margin-right: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home-introduce {
+  position: relative;
+  background: url('https://png.pngtree.com/thumb_back/fh260/background/20220215/pngtree-creative-synthesis-education-background-image_926045.jpg') no-repeat center/cover;
+  height: 70vh;
+}
+
+.home-introduce-sub {
+  position: absolute;
+  background-color: white;
+  border: 2px dashed #156082;
+  border-radius: 30px;
+  height: 80%;
+  width: 400px;
+  top: 50%;
+  right: 10%;
+  transform: translateY(-50%);
+  padding: 20px;
+}
+
+.home-introduce-span {
+  color: #156082;
+  font-weight: 700;
+}
+
+.home-introduce-btn {
+  display: block;
+  margin: 0 30px;
+  padding: 10px;
+  background-color: #00B050;
+}
+
+.home-footer {
+  background-color: #e1f3f8;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.home-footer-span {
+  color: #00b050;
+  font-size: 17px;
+  font-weight: 600;
+  padding: 10px 0;
+  border-bottom: 2px solid #00b050;
+}
+
+.home-footer-subitem {
+  margin-top: 20px;
+}
+
+.home-footer-subitem a{
+  text-decoration: none;
+  color: black;
+}
+
+.introduction-title {
+  display: block;
+  color: #00b050;
+  font-size: 24px;
+  font-weight: 700;
+  padding: 10px 0;
+  border-bottom: 2px solid #00b050;
+  margin-bottom: 30px;
+}
+
+.introduction-sub-title {
+  color: black;
+  font-size: 20px;
+  border-bottom: none;
+  margin-bottom: 15px;
+}
+
+.introduction-sub-content {
+  text-align: justify;
+  line-height: 1.4;
 }
