--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,11 +47,44 @@
   margin-left: 10px;
 }
 
+.button-css {
+  background-color: #00B050;
+  color: white;
+}
+
+.image-css-28 {
+  width: 28px;
+  height: 28px;
+}
+
+.image-css-20 {
+  width: 20px;
+  height: 20px;
+}
+
+.span-css-green-18 {
+  font-size: 18px;
+  color: #00B050;
+  font-weight: 600;
+}
+
+.span-css-blue-16 {
+  font-size: 16px;
+  color: #156082;
+  font-weight: 550;
+}
+
+
+.image-css-16 {
+  width: 16px;
+  height: 16px;
+}
+
 .header {
   background-color: #00B050;
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
   padding: 10px 20px;
 }
 
